# anland

./: .gitignore  README.md  README_v3.md  build_and_install.sh  build_magisk_module.sh
.github/workflows/: anland-build.yml  build.yml
android_consumer/app/src/main/java/com/virtual_drm/consumer/: MainActivity.java
consumers/anland_v4/: libdisplay_consumer
consumers/anland_v4/android_consumer/app/src/main/jni/: CMakeLists.txt  anw_hidden.h  native_consumer.c
consumers/anland_v5/android_consumer/app/: build.gradle
consumers/anland_v5/android_consumer/app/src/main/: AndroidManifest.xml
consumers/anland_v5/android_consumer/app/src/main/jni/: CMakeLists.txt  fd_helper.c  native_audio.c  native_audio.h  native_consumer.c
consumers/anland_virtual_keyboard_v4/android_consumer/: build.gradle  local.properties  settings.gradle
consumers/anland_virtual_keyboard_v4/android_consumer/app/: build.gradle
consumers/anland_virtual_keyboard_v4/android_consumer/app/src/main/: AndroidManifest.xml
consumers/anland_virtual_keyboard_v4/android_consumer/app/src/main/jni/: CMakeLists.txt
consumers/anland_virtual_keyboard_v4/common/: protocol.h  socket_utils.c
consumers/anland_virtual_keyboard_v4/libdisplay_consumer/: display_consumer.c  display_consumer.h
daemon/: daemon.c
kdefix/: build.sh  kwin.patch  xwayland.patch
libdisplay_consumer/: display_consumer.c  display_consumer.h
libdisplay_producer/: display_producer.c
magisk_module/: display_daemon  sepolicy.rule
producers/kde/Arch_v3/: build.sh  kwin.patch
producers/kde/Arch_v3/kwin/src/backends/anland/: anland_backend.cpp  anland_backend.h  anland_egl_backend.cpp  anland_egl_backend.h  display_producer.c
producers/kde/Debian13_v4/: build.sh  kwin  xwayland.patch
producers/kde/Debian13_v5/: build.sh  kwin  kwin.patch
producers/kde/Fedora43_v3/: build.sh  kwin.patch  startup.sh
producers/kde/Fedora43_v3/kwin/src/backends/anland/: anland_backend.cpp  anland_output.cpp  display_producer.h  protocol.h
producers/kde/Fedora43_v4/: build.sh
producers/kde/Fedora43_v5/: build.sh  kwin.patch
producers/kde/anland_backend_debian13_v4/src/backends/anland/: anland_backend.cpp  anland_backend.h  anland_input.cpp  display_producer.c  display_producer.h  protocol.h
producers/kde/anland_backend_debian13_v5/src/backends/anland/: anland_audio.c  anland_backend.cpp  anland_egl_backend.cpp  anland_egl_backend.h  anland_input.h  anland_logging.cpp  anland_logging.h  anland_output.cpp  anland_output.h  display_producer.c  display_producer.h  protocol.h
producers/kde/anland_backend_v4/src/backends/anland/: CMakeLists.txt  anland_backend.cpp  anland_backend.h  anland_egl_backend.cpp  anland_input.cpp  socket_utils.h
producers/kde/anland_backend_v5/src/backends/anland/: CMakeLists.txt  anland_audio.c  anland_audio.h  anland_backend.cpp  anland_egl_backend.h  anland_input.h  anland_output.h  display_producer.c  display_producer.h  protocol.h
producers/kde/ubuntu2604/: kwin.patch
producers/kde/ubuntu2604_v4/: build.sh  kwin  kwin.patch
producers/kde/ubuntu2604_v5/: build.sh  kwin
weston/libweston/backend-virtual-drm/: virtual-drm.c
(+10 files in other folders)
